// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots modul-components|m-auto-horizontal-scroll/CarouselExample Sandbox 1`] = `
<div
  class="m-auto-horizontal-scroll m--is-gradient-style-white"
  style="background: rgb(244, 244, 244); position: relative;"
>
  <!---->
   
  <!---->
   
  <div
    class="m-auto-horizontal-scroll__body"
  >
    <div
      class="m-auto-horizontal-scroll__body-content"
      style="min-width: 4336px;"
    >
      <div
        style="display: flex; padding: 32px 16px;"
      >
        <article
          data-box-index="1"
          style="transition: background-color 0.3s ease; flex-shrink: 0; padding: 16px; margin-right: 16px; background-color: rgb(255, 255, 255); width: 200px; height: 200px;"
        >
          <p
            class="m-u--no-margin"
          >
            Carousel item #1
          </p>
        </article>
        <article
          data-box-index="2"
          style="transition: background-color 0.3s ease; flex-shrink: 0; padding: 16px; margin-right: 16px; background-color: rgb(255, 255, 255); width: 200px; height: 200px;"
        >
          <p
            class="m-u--no-margin"
          >
            Carousel item #2
          </p>
        </article>
        <article
          data-box-index="3"
          style="transition: background-color 0.3s ease; flex-shrink: 0; padding: 16px; margin-right: 16px; background-color: rgb(255, 255, 255); width: 200px; height: 200px;"
        >
          <p
            class="m-u--no-margin"
          >
            Carousel item #3
          </p>
        </article>
        <article
          data-box-index="4"
          style="transition: background-color 0.3s ease; flex-shrink: 0; padding: 16px; margin-right: 16px; background-color: rgb(255, 255, 255); width: 200px; height: 200px;"
        >
          <p
            class="m-u--no-margin"
          >
            Carousel item #4
          </p>
        </article>
        <article
          data-box-index="5"
          style="transition: background-color 0.3s ease; flex-shrink: 0; padding: 16px; margin-right: 16px; background-color: rgb(255, 255, 255); width: 200px; height: 200px;"
        >
          <p
            class="m-u--no-margin"
          >
            Carousel item #5
          </p>
        </article>
        <article
          data-box-index="6"
          style="transition: background-color 0.3s ease; flex-shrink: 0; padding: 16px; margin-right: 16px; background-color: rgb(255, 255, 255); width: 200px; height: 200px;"
        >
          <p
            class="m-u--no-margin"
          >
            Carousel item #6
          </p>
        </article>
        <article
          data-box-index="7"
          style="transition: background-color 0.3s ease; flex-shrink: 0; padding: 16px; margin-right: 16px; background-color: rgb(255, 193, 3); width: 200px; height: 200px;"
        >
          <p
            class="m-u--no-margin"
          >
            Carousel item #7
          </p>
        </article>
        <article
          data-box-index="8"
          style="transition: background-color 0.3s ease; flex-shrink: 0; padding: 16px; margin-right: 16px; background-color: rgb(255, 255, 255); width: 200px; height: 200px;"
        >
          <p
            class="m-u--no-margin"
          >
            Carousel item #8
          </p>
        </article>
        <article
          data-box-index="9"
          style="transition: background-color 0.3s ease; flex-shrink: 0; padding: 16px; margin-right: 16px; background-color: rgb(255, 255, 255); width: 200px; height: 200px;"
        >
          <p
            class="m-u--no-margin"
          >
            Carousel item #9
          </p>
        </article>
        <article
          data-box-index="10"
          style="transition: background-color 0.3s ease; flex-shrink: 0; padding: 16px; margin-right: 16px; background-color: rgb(255, 255, 255); width: 200px; height: 200px;"
        >
          <p
            class="m-u--no-margin"
          >
            Carousel item #10
          </p>
        </article>
        <article
          data-box-index="11"
          style="transition: background-color 0.3s ease; flex-shrink: 0; padding: 16px; margin-right: 16px; background-color: rgb(255, 255, 255); width: 200px; height: 200px;"
        >
          <p
            class="m-u--no-margin"
          >
            Carousel item #11
          </p>
        </article>
        <article
          data-box-index="12"
          style="transition: background-color 0.3s ease; flex-shrink: 0; padding: 16px; margin-right: 16px; background-color: rgb(255, 255, 255); width: 200px; height: 200px;"
        >
          <p
            class="m-u--no-margin"
          >
            Carousel item #12
          </p>
        </article>
        <article
          data-box-index="13"
          style="transition: background-color 0.3s ease; flex-shrink: 0; padding: 16px; margin-right: 16px; background-color: rgb(255, 255, 255); width: 200px; height: 200px;"
        >
          <p
            class="m-u--no-margin"
          >
            Carousel item #13
          </p>
        </article>
        <article
          data-box-index="14"
          style="transition: background-color 0.3s ease; flex-shrink: 0; padding: 16px; margin-right: 16px; background-color: rgb(255, 255, 255); width: 200px; height: 200px;"
        >
          <p
            class="m-u--no-margin"
          >
            Carousel item #14
          </p>
        </article>
        <article
          data-box-index="15"
          style="transition: background-color 0.3s ease; flex-shrink: 0; padding: 16px; margin-right: 16px; background-color: rgb(255, 255, 255); width: 200px; height: 200px;"
        >
          <p
            class="m-u--no-margin"
          >
            Carousel item #15
          </p>
        </article>
        <article
          data-box-index="16"
          style="transition: background-color 0.3s ease; flex-shrink: 0; padding: 16px; margin-right: 16px; background-color: rgb(255, 255, 255); width: 200px; height: 200px;"
        >
          <p
            class="m-u--no-margin"
          >
            Carousel item #16
          </p>
        </article>
        <article
          data-box-index="17"
          style="transition: background-color 0.3s ease; flex-shrink: 0; padding: 16px; margin-right: 16px; background-color: rgb(255, 255, 255); width: 200px; height: 200px;"
        >
          <p
            class="m-u--no-margin"
          >
            Carousel item #17
          </p>
        </article>
        <article
          data-box-index="18"
          style="transition: background-color 0.3s ease; flex-shrink: 0; padding: 16px; margin-right: 16px; background-color: rgb(255, 255, 255); width: 200px; height: 200px;"
        >
          <p
            class="m-u--no-margin"
          >
            Carousel item #18
          </p>
        </article>
        <article
          data-box-index="19"
          style="transition: background-color 0.3s ease; flex-shrink: 0; padding: 16px; margin-right: 16px; background-color: rgb(255, 255, 255); width: 200px; height: 200px;"
        >
          <p
            class="m-u--no-margin"
          >
            Carousel item #19
          </p>
        </article>
        <article
          data-box-index="20"
          style="transition: background-color 0.3s ease; flex-shrink: 0; padding: 16px; background-color: rgb(255, 255, 255); width: 200px; height: 200px;"
        >
          <p
            class="m-u--no-margin"
          >
            Carousel item #20
          </p>
        </article>
      </div>
    </div>
  </div>
  <div
    class="resize-sensor"
    dir="ltr"
    style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;"
  >
    <div
      class="resize-sensor-expand"
      style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;"
    >
      <div
        style="position: absolute; left: 0px; top: 0px; transition: 0s;"
      />
    </div>
    <div
      class="resize-sensor-shrink"
      style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;"
    >
      <div
        style="position: absolute; left: 0px; top: 0px; transition: 0s; width: 200%; height: 200%;"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots modul-components|m-auto-horizontal-scroll/CarouselExample Two Items 1`] = `
<div
  class="m-auto-horizontal-scroll m--is-gradient-style-white"
  style="background: rgb(244, 244, 244); position: relative;"
>
  <!---->
   
  <!---->
   
  <div
    class="m-auto-horizontal-scroll__body"
  >
    <div
      class="m-auto-horizontal-scroll__body-content"
      style="min-width: 448px;"
    >
      <div
        style="display: flex; padding: 32px 16px;"
      >
        <article
          data-box-index="1"
          style="transition: background-color 0.3s ease; flex-shrink: 0; padding: 16px; margin-right: 16px; background-color: rgb(255, 193, 3); width: 200px; height: 200px;"
        >
          <p
            class="m-u--no-margin"
          >
            Carousel item #1
          </p>
        </article>
        <article
          data-box-index="2"
          style="transition: background-color 0.3s ease; flex-shrink: 0; padding: 16px; background-color: rgb(255, 255, 255); width: 200px; height: 200px;"
        >
          <p
            class="m-u--no-margin"
          >
            Carousel item #2
          </p>
        </article>
      </div>
    </div>
  </div>
  <div
    class="resize-sensor"
    dir="ltr"
    style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;"
  >
    <div
      class="resize-sensor-expand"
      style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;"
    >
      <div
        style="position: absolute; left: 0px; top: 0px; transition: 0s;"
      />
    </div>
    <div
      class="resize-sensor-shrink"
      style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;"
    >
      <div
        style="position: absolute; left: 0px; top: 0px; transition: 0s; width: 200%; height: 200%;"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots modul-components|m-auto-horizontal-scroll/CarouselExample With Button 1`] = `
<div
  class="m-auto-horizontal-scroll m--is-gradient-style-white"
  style="background: rgb(244, 244, 244); position: relative;"
>
  <!---->
   
  <!---->
   
  <div
    class="m-auto-horizontal-scroll__body"
  >
    <div
      class="m-auto-horizontal-scroll__body-content"
      style="min-width: 3040px;"
    >
      <div
        style="display: flex; padding: 32px 16px;"
      >
        <article
          data-box-index="1"
          style="transition: background-color 0.3s ease; flex-shrink: 0; padding: 16px; margin-right: 16px; background-color: rgb(255, 255, 255); width: 200px; height: 200px;"
        >
          <p
            class="m-u--no-margin"
          >
            Carousel item #1
          </p>
        </article>
        <article
          data-box-index="2"
          style="transition: background-color 0.3s ease; flex-shrink: 0; padding: 16px; margin-right: 16px; background-color: rgb(255, 193, 3); width: 200px; height: 200px;"
        >
          <p
            class="m-u--no-margin"
          >
            Carousel item #2
          </p>
        </article>
        <article
          data-box-index="3"
          style="transition: background-color 0.3s ease; flex-shrink: 0; padding: 16px; margin-right: 16px; background-color: rgb(255, 255, 255); width: 200px; height: 200px;"
        >
          <p
            class="m-u--no-margin"
          >
            Carousel item #3
          </p>
        </article>
        <article
          data-box-index="4"
          style="transition: background-color 0.3s ease; flex-shrink: 0; padding: 16px; margin-right: 16px; background-color: rgb(255, 255, 255); width: 200px; height: 200px;"
        >
          <p
            class="m-u--no-margin"
          >
            Carousel item #4
          </p>
        </article>
        <article
          data-box-index="5"
          style="transition: background-color 0.3s ease; flex-shrink: 0; padding: 16px; margin-right: 16px; background-color: rgb(255, 255, 255); width: 200px; height: 200px;"
        >
          <p
            class="m-u--no-margin"
          >
            Carousel item #5
          </p>
        </article>
        <article
          data-box-index="6"
          style="transition: background-color 0.3s ease; flex-shrink: 0; padding: 16px; margin-right: 16px; background-color: rgb(255, 255, 255); width: 200px; height: 200px;"
        >
          <p
            class="m-u--no-margin"
          >
            Carousel item #6
          </p>
        </article>
        <article
          data-box-index="7"
          style="transition: background-color 0.3s ease; flex-shrink: 0; padding: 16px; margin-right: 16px; background-color: rgb(255, 255, 255); width: 200px; height: 200px;"
        >
          <p
            class="m-u--no-margin"
          >
            Carousel item #7
          </p>
        </article>
        <article
          data-box-index="8"
          style="transition: background-color 0.3s ease; flex-shrink: 0; padding: 16px; margin-right: 16px; background-color: rgb(255, 255, 255); width: 200px; height: 200px;"
        >
          <p
            class="m-u--no-margin"
          >
            Carousel item #8
          </p>
        </article>
        <article
          data-box-index="9"
          style="transition: background-color 0.3s ease; flex-shrink: 0; padding: 16px; margin-right: 16px; background-color: rgb(255, 255, 255); width: 200px; height: 200px;"
        >
          <p
            class="m-u--no-margin"
          >
            Carousel item #9
          </p>
        </article>
        <article
          data-box-index="10"
          style="transition: background-color 0.3s ease; flex-shrink: 0; padding: 16px; margin-right: 16px; background-color: rgb(255, 255, 255); width: 200px; height: 200px;"
        >
          <p
            class="m-u--no-margin"
          >
            Carousel item #10
          </p>
        </article>
        <article
          data-box-index="11"
          style="transition: background-color 0.3s ease; flex-shrink: 0; padding: 16px; margin-right: 16px; background-color: rgb(255, 255, 255); width: 200px; height: 200px;"
        >
          <p
            class="m-u--no-margin"
          >
            Carousel item #11
          </p>
        </article>
        <article
          data-box-index="12"
          style="transition: background-color 0.3s ease; flex-shrink: 0; padding: 16px; margin-right: 16px; background-color: rgb(255, 255, 255); width: 200px; height: 200px;"
        >
          <p
            class="m-u--no-margin"
          >
            Carousel item #12
          </p>
        </article>
        <article
          data-box-index="13"
          style="transition: background-color 0.3s ease; flex-shrink: 0; padding: 16px; margin-right: 16px; background-color: rgb(255, 255, 255); width: 200px; height: 200px;"
        >
          <p
            class="m-u--no-margin"
          >
            Carousel item #13
          </p>
        </article>
        <article
          data-box-index="14"
          style="transition: background-color 0.3s ease; flex-shrink: 0; padding: 16px; background-color: rgb(255, 255, 255); width: 200px; height: 200px;"
        >
          <p
            class="m-u--no-margin"
          >
            Carousel item #14
          </p>
        </article>
      </div>
    </div>
  </div>
  <div
    class="resize-sensor"
    dir="ltr"
    style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;"
  >
    <div
      class="resize-sensor-expand"
      style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;"
    >
      <div
        style="position: absolute; left: 0px; top: 0px; transition: 0s;"
      />
    </div>
    <div
      class="resize-sensor-shrink"
      style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;"
    >
      <div
        style="position: absolute; left: 0px; top: 0px; transition: 0s; width: 200%; height: 200%;"
      />
    </div>
  </div>
</div>
`;
